--- a/fundraising.html
+++ b/fundraising.html
@@ -41,7 +41,7 @@
         We run multiple raffles throughout the year. Details, rules, and deadlines are posted on our Facebook pages.
       </p>
       <ul class="check">
-        <li><strong>Governor’s Tags (2)</strong> — coming soon (raffle details will be announced).</li>
+        <li><strong>Governor’s Tags (2)</strong> — now available below.</li>
         <li><strong>Additional raffles</strong> — gear, trips, and sponsor-donated items as available.</li>
         <li><strong>Banquet raffles & auctions</strong> — included as part of our annual banquet fundraiser.</li>
       </ul>
@@ -66,6 +66,62 @@
         Interested in sponsoring an item or donating services? Email <a href="mailto:ak.events@thefallenoutdoors.org">ak.events@thefallenoutdoors.org</a>.
       </p>
     </div></div>
+  </div>
+</section>
+  
+  <section class="section">
+  <h2>Governor’s Tag Raffles – 2026</h2>
+  <p class="muted">
+    Support Alaska veterans through outdoor therapeutic experiences by entering one of our
+    exclusive Governor’s Tag raffles.
+  </p>
+
+  <div class="raffle-grid">
+
+    <article class="raffle-card">
+      <img class="raffle-img" src="images/2026 Gov Caribou Tag Killey River.jpg" alt="Governor’s Killey River Caribou Tag SC608">
+      <div class="pad">
+        <h3>Governor’s Killey River Caribou Tag (SC608)</h3>
+        <ul class="raffle-pricing">
+          <li>$20 each</li>
+          <li>6 for $100</li>
+          <li>35 for $500</li>
+          <li>70 for $1000</li>
+        </ul>
+        <a class="btn accent" href="https://www.zeffy.com/en-US/ticketing/the-fallen-outdoors-governors-killey-river-caribou-tag-sc608" target="_blank" rel="noopener">
+          Buy Caribou Raffle Tickets
+        </a>
+      </div>
+    </article>
+
+    <article class="raffle-card">
+      <img class="raffle-img" src="images/2026 Gov Tag Chugach Brown Bear.jpg" alt="Governor’s Chugach Brown Bear Tag SB470">
+      <div class="pad">
+        <h3>Governor’s Chugach Brown Bear Tag (SB470)</h3>
+        <ul class="raffle-pricing">
+          <li>$20 each</li>
+          <li>6 for $100</li>
+          <li>35 for $500</li>
+          <li>70 for $1000</li>
+        </ul>
+        <a class="btn accent" href="https://www.zeffy.com/en-US/ticketing/governors-brown-bear-tag-2026" target="_blank" rel="noopener">
+          Buy Bear Raffle Tickets
+        </a>
+      </div>
+    </article>
+
+  </div>
+</section>
+  
+<section class="section">
+  <h2>Banquet Raffle Tickets</h2>
+  <p class="muted">
+    Banquet raffle tickets support local Alaska veteran events and include firearms,
+    gear packages, and sponsor-donated prizes.
+  </p>
+  <div class="btn-row">
+    <a class="btn accent" href="banquet.html">Banquet Fundraiser Page</a>
+    <a class="btn" href="#" aria-disabled="true">Banquet Raffle Tickets (Coming Soon)</a>
   </div>
 </section>
 </main>
