--- a/about.html
+++ b/about.html
@@ -55,7 +55,20 @@
         Team Alaska started in 2019 to bring that same mission to the unique conditions and opportunities found here at home.
       </p>
       <div class="btn-row">
-        <a class="btn accent" href="upcoming.html">Join a Trip</a>
+        <div class="btn-row">
+  <a class="btn accent"
+     href="https://www.facebook.com/groups/1089041847842037/"
+     target="_blank"
+     rel="noopener">
+    Join a Trip
+  </a>
+</div>
+
+<p class="small muted" style="margin-top:8px;">
+  Trip applications are managed through our private TFO West Coast Facebook group to help
+  ensure only Veterans and Active Duty members apply.
+</p>
+
         <a class="btn" href="donate.html">Donate</a>
       </div>
     </div></div>
