--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,18 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div class="footer-col">
-      <div class="badge">No Veteran Left Behind</div>
+      <div class="btn-row">
+  <a class="btn accent"
+     href="https://thefallenoutdoors.org/22-for-the-22/"
+     target="_blank"
+     rel="noopener">
+    $22 for the 22
+  </a>
+</div>
+
+<p class="small muted" style="margin-top:6px;">
+  $22 for the 22 is a national fundraising campaign of The Fallen Outdoors.
+</p>
       <h3 style="margin-top:10px;">The Fallen Outdoors — Team Alaska</h3>
       <p class="small muted">
         All-volunteer. No-cost therapeutic outdoor experiences for Veterans, Service Members, and Gold Star families.
