--- a/index.html
+++ b/index.html
@@ -5,119 +5,153 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="The Fallen Outdoors — Team Alaska" />
   <title>TFO Team Alaska — Home</title>
+
   <link rel="stylesheet" href="styles.css" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet" />
-
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap"
+    rel="stylesheet"
+  />
 </head>
+
 <body class="watermark-patriotic">
-<div id="header-placeholder"></div>
-<script>
-  fetch("header.html")
-    .then(r => r.text())
-    .then(html => { document.getElementById("header-placeholder").innerHTML = html; });
-</script>
-<section class="hero-banner" aria-label="TFO Team Alaska banner">
-  <img class="hero-banner-img" src="images/banner-memorialday-homer.jpg" alt="TFO Team Alaska group photo">
-  <div class="hero-banner-overlay">
-    <div class="container hero-content">
-      <h1>No Veteran Left Behind</h1>
-      <p>Outdoor therapeutic experiences for Veterans, First Responders, and Gold Star families across Alaska.</p>
-      <div class="hero-actions">
-        <a class="btn primary" href="upcoming.html">See Upcoming Trips</a>
-        <a class="btn" href="donate.html">Donate</a>
+  <!-- Shared Header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch("header.html")
+      .then(r => r.text())
+      .then(html => { document.getElementById("header-placeholder").innerHTML = html; })
+      .catch(() => { /* header failed to load */ });
+  </script>
+
+  <!-- Hero Banner (buttons removed per request) -->
+  <section class="hero-banner" aria-label="TFO Team Alaska banner">
+    <img
+      class="hero-banner-img"
+      src="images/banner-memorialday-homer.jpg"
+      alt="TFO Team Alaska group photo"
+      loading="eager"
+    />
+    <div class="hero-banner-overlay">
+      <div class="container hero-content">
+        <h1>No Veteran Left Behind</h1>
+        <p>Outdoor therapeutic experiences for Veterans, First Responders, and Gold Star families across Alaska.</p>
+        <!-- removed hero buttons -->
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <main class="container">
+    <!-- Mission / Intro (buttons removed per request) -->
+    <section class="hero hero-simple">
+      <div class="hero-content">
+        <div class="kicker">Team Alaska</div>
+        <h1>No-cost therapeutic outdoor adventures for Veterans, Service Members, and Gold Star families.</h1>
+        <p>
+          We connect people through hunting, fishing, hiking, camping, and other outdoor experiences—building camaraderie,
+          purpose, and lifelong skills. <strong>No Veteran Left Behind.</strong>
+        </p>
+        <!-- removed Join a Trip / Donate buttons -->
+      </div>
+    </section>
 
+    <!-- Impact -->
+    <section class="section" aria-labelledby="impact-2025">
+      <div class="section-head">
+        <h2 id="impact-2025">2025 Impact</h2>
+        <p class="muted">What your support helped make possible in Alaska.</p>
+      </div>
 
-<main class="container">
-<section class="hero hero-simple">
-  <div class="hero-content">
-    <div class="kicker">Team Alaska</div>
-    <h1>No-cost therapeutic outdoor adventures for Veterans, Service Members, and Gold Star families.</h1>
-    <p>
-      We connect people through hunting, fishing, hiking, camping, and other outdoor experiences—building camaraderie,
-      purpose, and lifelong skills. <strong>No Veteran Left Behind.</strong>
-    </p>
-    <div class="btn-row">
-      <a class="btn accent" href="upcoming.html">Join a Trip</a>
-      <a class="btn" href="donate.html">Donate</a>
-    </div>
-  </div>
-</section>
+      <div class="stats-grid">
+        <div class="stat">
+          <div class="stat-num">40+</div>
+          <div class="stat-label">Trips hosted</div>
+        </div>
+        <div class="stat">
+          <div class="stat-num">350+</div>
+          <div class="stat-label">Veterans served</div>
+        </div>
+        <div class="stat">
+          <div class="stat-num">680+</div>
+          <div class="stat-label">Volunteer hours</div>
+        </div>
+        <div class="stat">
+          <div class="stat-num">Year-round</div>
+          <div class="stat-label">Outdoor opportunities</div>
+        </div>
+      </div>
+    </section>
 
-<section class="section">
-  <div class="section-head">
-    <h2>2025 Impact</h2>
-    <p class="muted">What your support helped make possible in Alaska.</p>
-  </div>
-  <div class="stats-grid">
-    <div class="stat">
-      <div class="stat-num">40+</div>
-      <div class="stat-label">Trips hosted</div>
-    </div>
-    <div class="stat">
-      <div class="stat-num">350+</div>
-      <div class="stat-label">Veterans served</div>
-    </div>
-    <div class="stat">
-      <div class="stat-num">680+</div>
-      <div class="stat-label">Volunteer hours</div>
-    </div>
-    <div class="stat">
-      <div class="stat-num">Year-round</div>
-      <div class="stat-label">Outdoor opportunities</div>
-    </div>
-  </div>
-</section>
+    <!-- How to join + Featured event -->
+    <section class="split section" aria-label="How to join and featured event">
+      <div class="card">
+        <div class="pad">
+          <h2>How to join a trip</h2>
 
-<section class="split section">
-  <div class="card"><div class="pad">
-    <h2>How to join a trip</h2>
-    <ol class="steps">
-      <li><strong>Watch for trip posts</strong> on the TFO West Coast Facebook page.</li>
-      <li><strong>Follow the post instructions</strong> to enter for that specific trip.</li>
-      <li><strong>Winners are drawn</strong>, and participants are added to a group chat with details.</li>
-    </ol>
-    <div class="btn-row">
-      <a class="btn accent" href="https://www.facebook.com/groups/1089041847842037/" target="_blank" rel="noopener">TFO West Coast FB</a>
-      <a class="btn" href="upcoming.html">Upcoming Trips</a>
-    </div>
-    <p class="small muted" style="margin-top:10px;">Trip details, meet-up info, and gear guidance are shared in the trip group chat.</p>
-  </div></div>
+          <p class="muted">
+            Trip opportunities are posted on the <strong>TFO West Coast</strong> Facebook group. This is a
+            <strong>private group</strong> that helps us keep trip drawings focused on
+            <strong>Veterans and Active Duty</strong> members and provides a secure place to share trip details.
+          </p>
 
-  <div class="card"><div class="pad">
-    <div class="badge">Featured Event</div>
-    <h2>7th Annual Banquet</h2>
-    <p class="muted">February 28, 2026 • Marriott Hotel • Anchorage, Alaska</p>
-    <p>
-      Our banquet is our biggest annual fundraiser—supporting no-cost trips, equipment, logistics, and outreach across Alaska.
-    </p>
-    <div class="btn-row">
-      <a class="btn accent" href="banquet.html">Banquet Details</a>
-      <a class="btn" href="https://www.facebook.com/TFOAlaska" target="_blank" rel="noopener">Banquet FB Page</a>
-    </div>
-  </div></div>
-</section>
+          <ol class="steps">
+            <li><strong>Request to join</strong> the TFO West Coast Facebook group.</li>
+            <li>
+              <strong>Answer the membership questions</strong> and follow the group rules so our team can verify
+              eligibility and keep the community mission-focused.
+            </li>
+            <li><strong>Watch for trip posts</strong> and follow the instructions on each post to enter.</li>
+            <li><strong>Winners are drawn</strong> and added to a group chat for meet-up info, safety notes, and gear guidance.</li>
+          </ol>
 
-<section class="section">
-  <div class="card"><div class="pad">
-    <h2>Support the mission</h2>
-    <p class="muted">
-      Donations and sponsors keep trips free for participants and help us deliver safe, meaningful experiences statewide.
-    </p>
-    <div class="btn-row">
-      <a class="btn accent" href="donate.html">Donate</a>
-      <a class="btn" href="fundraising.html">Current Fundraisers</a>
-    </div>
-  </div></div>
-</section>
-</main>
+          <div class="btn-row">
+            <a class="btn accent" href="https://www.facebook.com/groups/1089041847842037/" target="_blank" rel="noopener">
+              Request Access: TFO West Coast FB
+            </a>
+          </div>
 
+          <p class="small muted" style="margin-top:10px;">
+            If you’re not selected for one trip, keep watching—new opportunities are posted throughout the year.
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="pad">
+          <div class="badge">Featured Event</div>
+          <h2>7th Annual Banquet</h2>
+          <p class="muted">February 28, 2026 • Marriott Hotel • Anchorage, Alaska</p>
+          <p>
+            Our banquet is our biggest annual fundraiser—supporting no-cost trips, equipment, logistics, and outreach across Alaska.
+          </p>
+          <div class="btn-row">
+            <a class="btn accent" href="banquet.html">Banquet Details</a>
+            <a class="btn" href="https://www.facebook.com/TFOAlaska" target="_blank" rel="noopener">Banquet FB Page</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Support -->
+    <section class="section" aria-labelledby="support-mission">
+      <div class="card">
+        <div class="pad">
+          <h2 id="support-mission">Support the mission</h2>
+          <p class="muted">
+            Donations and sponsors keep trips free for participants and help us deliver safe, meaningful experiences statewide.
+          </p>
+          <div class="btn-row">
+            <a class="btn accent" href="donate.html">Donate</a>
+            <a class="btn" href="fundraising.html">Current Fundraisers</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Shared Footer -->
   <div id="footer-placeholder"></div>
   <script>
     fetch("footer.html")
@@ -126,14 +160,12 @@
       .catch(() => { /* footer failed to load */ });
   </script>
 
+  <!-- Facebook SDK (only if you are embedding FB widgets anywhere on the site) -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0"></script>
 
-<!-- Facebook SDK (for group plugin) -->
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous"
-  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0"></script>
-
-<!-- Instagram embed script -->
-<script async src="https://www.instagram.com/embed.js"></script>
+  <!-- Instagram embed script (only needed if you embed Instagram posts) -->
+  <script async src="https://www.instagram.com/embed.js"></script>
 </body>
-
 </html>
